# ld

./: .gitignore
DxLib_BCC/RunSampleFolder/: DxDrawFunc.lib  DxUseCLibW.lib  celt.lib  sample.bdp  zlib.lib
DxLib_BCC/help/: dxdload.html  dxhplog.html  dxlicense.html  dxprogram.html  dxtec.html  dxuse.html  index.html
DxLib_BCC/プロジェクトに追加すべきファイル_BCC用/: DxUseCLib.lib  libpng.lib
DxLib_VC/help/: dxlecture_main.html  dxlog.html  dxolddload.html  dxvulnerability.html
DxLib_VC/サンプルプログラム実行用フォルダ/: VisualStudio_2022用.sln  VisualStudio_2022用.vcxproj  VisualStudio_2022用.vcxproj.filters
re/: Thumbs.db
re/demo/: LD_demo01.txt  LD_demo02.txt  LD_demo03.txt
re/text/: text01.csv  text02.csv  text03.csv  text04.csv
replay/: steam_autocloud.vdf
reverse/: README.md
reverse/analysis/: demo-format.md  dispatcher-rename-plan.md  dxarchive-key-function.md  ghidra-first-pass.md  main-program-flow.md  resource-loading.md  reverse-status-2026-07-03.md  save-replay-format.md  suspected-functions.md  (+1 more)
reverse/reconstructed/project/: CMakeLists.txt  Log.txt  README.md
reverse/reconstructed/project/build-win11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LikeDreamerRe.sln  LikeDreamerRe.vcxproj  LikeDreamerRe.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
reverse/reconstructed/project/build-win11/LikeDreamerRe.dir/Release/: LikeDreamerRe.exe.recipe
reverse/reconstructed/project/build-win11/LikeDreamerRe.dir/Release/LikeDreamerRe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
reverse/reconstructed/project/build-win11/Release/: Log.txt
reverse/reconstructed/project/build-win11/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
reverse/reconstructed/project/build-win11/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
reverse/reconstructed/project/build-win11/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
reverse/reconstructed/project/build-win11/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
reverse/reconstructed/project/docs/: enemy-projectile-pseudocode.md  enemy-pseudocode-stage01-04.md  enemy-pseudocode-stage05-07.md  enemy-pseudocode-stage08-10.md  projectile-pseudocode.md
reverse/reconstructed/project/src/: app.cpp  app.h  frontend_runtime.cpp  frontend_runtime.h  main.cpp  path_utils.cpp  path_utils.h  reconstruction_notes.h  replay_data.h  resource_manager.cpp  resource_manager.h  resource_tables.cpp  resource_tables.h  save_config.cpp  save_config.h  stage_probe.cpp  stage_probe.h  stage_runtime.cpp  stage_runtime.h  stage_runtime_boss07.cpp  stage_runtime_boss08.cpp  stage_runtime_boss09.cpp  stage_runtime_boss10_aux.cpp  stage_runtime_enemy06.cpp  stage_runtime_enemy07.cpp  stage_runtime_enemy08.cpp  stage_runtime_enemy10.cpp  stage_runtime_late.cpp  stage_runtime_midboss06.cpp  stage_runtime_midboss07.cpp  stage_runtime_midboss09.cpp  stage_runtime_midboss09_tail.cpp  stage_runtime_pause.cpp  stage_runtime_scene10.cpp  stage_runtime_stage05_07.cpp  stage_runtime_stage08_10.cpp  steam_stub.cpp  steam_stub.h  text_database.cpp  text_database.h
(+1047 files in other folders)
